Avoid a small gap in the resume

--- a/assets/css/pages/resume.css
+++ b/assets/css/pages/resume.css
@@ -106,4 +106,8 @@
     letter-spacing: 0.05em;
     position: relative;
   }
+
+  .Resume__section > div > :has(+ .no-print:last-child) {
+    margin-bottom: 0;
+  }
 }
